app/assets/stylesheets/application.css
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or vendor/assets/stylesheets of plugins, if any, can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the top of the
 * compiled file, but it's generally better to create a new file per style scope.
 *
 *= require_self
 *= require jquery.handsontable.bootstrap
 *= require jquery.handsontable
 */

 /* GRAPHS */
.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}
.bar {
  fill: steelblue;
}
.x.axis path {
  display: none;
}
.legend {
  margin-left: 20px;
}
.hovered-label {
  font-size: 14px;
  font-weight: bold;
}
button, .btn, li, .inline-dropdown-text, h3, h1 {
  font-family: 'Noto Sans', sans-serif;
}
h1 {
  margin-top: -50px;
}
h1.graphs, h1.home {
  text-align: center;
  margin-top: 30px;
}
h3.graphs {
  text-align: center;
  margin-top: 10px;
}
h1.home {
  color: white;
  padding-top: 70px;
  font-weight: 700;
}
.btn.home {
  margin-top: 30px;
}
.inline-dropdown, .inline-dropdown-text {
  margin: 0 auto;
  display: inline-block;
  font-size: 18px;
}
.inline-dropdown-wrapper {
  height: 50px;
  padding: 10px;
  width: 700px;
  margin: -40px auto 0 auto;
}
.smaller-width {
  width: 400px;
}
.svg-wrapper {
  width: 960px;
  margin: 0 auto;
}
.svg {
  background-color: white;
  margin-bottom: 50px;
  margin-left: 20px;
}
.dragdealer.vertical {
  left: 0px;
}
/* TABLES */
table, th, td {
  border: 1px solid black;
}
.htDimmed {
  color: blue;
}
.tableCampaigns, .tableDateCampaigns {
  height: 600px;
  overflow: scroll;
  width: 960px;
  margin-top: 20px;
  margin-bottom: 50px;
}
.tableGroupCampaigns.handsontable {
  width: 800px;
}
.tableGroupCampaigns{
  height: 600px;
  overflow: scroll;
  width: inherit;
  margin: 20px 0px 100px -80px;
  margin-top: 20px;
  margin-bottom: 100px;
}
.tableGroupCampaign {
  margin: 15px auto 10px auto;
}
.large-1.columns {
  color: white;
}
.center-me {
  margin: -20px auto 0 auto;
  width: 600px;
}
.csv-h1 {
  display: inline-block;
  margin-top: 0px;
}
.csv-container {
  margin-top: -30px;
}
.csv {
  height: 25px;
  display: inline-block;
  margin-left: 20px;
  margin-bottom: 14px;
}
.all-c {
  margin-left: 99px;
}
.hide_table {
  opacity: 0;
}
.show-campaigns-wrapper {
  margin: 0 auto;
  width: 138px;
}
.show_button{
  margin: 20px auto;
}
#datepicker {
  margin-bottom: 20px;
  padding-top: 10px;
}
.ui-widget-header {
  border: 1px solid #dddddd;
  background: #f6f6f6 url(images/ui-bg_highlight-soft_100_f6f6f6_1x100.png) 50% 50% repeat-x;
}
.ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default {
border: 0px;
background: white;
font-weight: bold;
color: #0073ea;
}
/* OTHER */
.hide-me {
  opacity: 0;
}
.placekitten {
  min-height: 700px;
  margin-top: -73px;

  background: 
    linear-gradient(
      rgba(0, 0, 0, 0.5),
      rgba(0, 0, 0, 0.5)
    ),
    url("https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS8CnDXZ4eyXjymBcyzSHU7ivePxFcUO-vF_YnptdsplB4bVIsA");
  background-size: 100%;
}
.home-btn-wrapper {
  margin: 0 auto;
  width: 130px;
}
.home-border {
  border-style: solid;
  border-color: white;
  margin: 0 auto 40px auto;
  padding-bottom: 100px;
}
.home-border-wrapper {
  margin: 0 auto;
  width: 600px;
  padding-top: 80px;
}
.home-border-fill {
  background-color: rgba(0, 0, 0, 0.3);
  margin-top: 50px;
  height: 330px;
}
.modal-dialog {
  margin-top: 120px;
}

